fixed z-index for clickable links on workstation page

--- a/client/src/saas/layout/nav.scss
+++ b/client/src/saas/layout/nav.scss
@@ -64,6 +64,8 @@
 }
 .navWorkstation{
     z-index:3;
+    /*z-index won't work without position relative*/
+    position: relative;
 }
 /*set display to none, until the media query requests it*/
 .hamburgerNav {
